--- a/packages/carport.yaml
+++ b/packages/carport.yaml
@@ -8,24 +8,14 @@ light:
 entity_controller:
   entry_motion_light:
     sensor:
+      - binary_sensor.carport_motion
+      - binary_sensor.entrycam_motion
       - sensor.carport_camera_motion
       - sensor.entry_camera_motion
     entity: light.carport_lights
     delay: 180
     start_time: sunset - 00:30:00
     end_time: sunrise + 00:30:00
-
-camera:
-  - platform: reolink_dev
-    name: entry_reo
-    host: entrycam.iot
-    username: admin
-    password: ""
-  - platform: reolink_dev
-    name: carport_reo
-    host: carport.iot
-    username: admin
-    password: ""
 
 binary_sensor:
   - platform: template
