--- a/packages/rooms/office.yaml
+++ b/packages/rooms/office.yaml
@@ -15,6 +15,8 @@ automation:
     action:
       - service: light.turn_on
         entity_id: light.office_strip
+        data:
+          effect: Rainbow
   - alias: Office - Switch 2
     trigger:
       - entity_id: binary_sensor.office_switch2
