--- a/packages/rooms/entry.yaml
+++ b/packages/rooms/entry.yaml
@@ -11,6 +11,7 @@ automation:
     trigger:
     - platform: sun
       event: sunset
+      offset: "-01:00:00"
     condition: []
     action:
     - domain: light
