--- a/packages/rooms/garage.yaml
+++ b/packages/rooms/garage.yaml
@@ -9,3 +9,32 @@ camera:
   - platform: ffmpeg
     name: garage
     input: rtsp://admin:542285@192.168.0.219/live/profile.0
+
+automation:
+  - id: '1618649719643'
+    alias: Motion - Garage person
+    description: ''
+    trigger:
+    - platform: state
+      entity_id: binary_sensor.garage_person_motion
+      from: 'off'
+      to: 'on'
+    condition:
+    - condition: or
+      conditions:
+      - condition: sun
+        before: sunrise
+        before_offset: '-1:00:00'
+      - condition: sun
+        after: sunset
+        after_offset: '-1:00:00'
+    action:
+    - service: light.turn_on
+      entity_id: light.garage_lights
+    - wait_for_trigger:
+      - platform: state
+        entity_id: binary_sensor.garage_person_motion
+        to: 'off'
+    - service: light.turn_off
+      entity_id: light.garage_lights
+    mode: restart
